update all section responsve homepage

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </svg>
             </a>
           </div>
-          <div class="absolute bottom-[-65px] right-0 overflow-hidden">
+          <div class="absolute hidden md:block bottom-[-65px] right-0 overflow-hidden">
             <img src="images/img-ads.png" alt="product" class="w-full h-full" />
           </div>
         </div>
