update page katalog responsive and about page

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       <!-- Mobile menu toggle (visible on small screens) -->
       <button id="menuToggle" class="btn-menu-toggle" aria-controls="mobileMenu" aria-expanded="false" aria-label="Open main menu">☰</button>
       <ul class="nav-left">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#products">KATALOG PRODUK</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="katalog.html">KATALOG PRODUK</a></li>
       </ul>
-      <a class="logo" href="#home">
+      <a class="logo" href="index.html">
         <div class="logo-circle"><img src="images/brand.svg" alt="Brand Adco Food"></div>
         <span class="logo-text">ADCO FOOD</span>
       </a>
       <div class="nav-right">
         <ul class="nav-links">
-          <li><a href="#about">TENTANG KAMI</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="about.html">TENTANG KAMI</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <div class="icons">
           <button aria-label="cart" class="icon-btn"><img src="images/ic_cart.svg" alt="Cart"><span class="badge">0</span></button>
