update page kontak

--- a/katalog.html
+++ b/katalog.html
@@ -26,7 +26,7 @@
       <div class="nav-right">
         <ul class="nav-links">
           <li><a href="about.html">TENTANG KAMI</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="contact.html">KONTAK</a></li>
         </ul>
         <div class="icons">
           <button aria-label="cart" class="icon-btn"><img src="images/ic_cart.svg" alt="Cart"><span class="badge">0</span></button>
@@ -375,17 +375,17 @@
   <nav id="mobileMenu" class="mobile-menu" aria-hidden="true" aria-labelledby="menuToggle">
     <div class="mobile-menu-inner p-6">
       <div class="flex items-center justify-center mb-6">
-        <a href="index.html#home" class="flex flex-col items-center gap-3">
+        <a href="index.html" class="flex flex-col items-center gap-3">
           <div class="logo-circle"><img src="images/brand.svg" alt="Brand Adco Food"></div>
           <span class="logo-text">ADCO FOOD</span>
         </a>
         <button id="menuClose" aria-label="Close menu" class="menu-close">×</button>
       </div>
       <ul class="flex flex-col gap-4">
-        <li><a href="index.html#home" class="block py-2">HOME</a></li>
+        <li><a href="index.html" class="block py-2">HOME</a></li>
         <li><a href="katalog.html" class="block py-2">KATALOG PRODUK</a></li>
-        <li><a href="index.html#about" class="block py-2">TENTANG KAMI</a></li>
-        <li><a href="index.html#contact" class="block py-2">CONTACT</a></li>
+        <li><a href="about.html" class="block py-2">TENTANG KAMI</a></li>
+        <li><a href="contact.html" class="block py-2">CONTACT</a></li>
       </ul>
     </div>
   </nav>
