--- a/katalog.html
+++ b/katalog.html
@@ -29,7 +29,7 @@
           <li><a href="contact.html">KONTAK</a></li>
         </ul>
         <div class="icons">
-          <button aria-label="cart" class="icon-btn"><img src="images/ic_cart.svg" alt="Cart"><span class="badge">0</span></button>
+          <a href="cart.html" aria-label="cart" class="icon-btn"><img src="images/ic_cart.svg" alt="Cart"><span class="badge">0</span></a>
           <button aria-label="user" class="icon-btn"><img src="images/ic_user.svg" alt="User"></button>
         </div>
       </div>
