update pop up lihat produk

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <h3 class="text-xl font-bold text-[#363636] px-4 mb-2">Tepung Roti Maissy</h3>
                   <p class="muted px-4">Tepung roti premium dengan kualitas stabil, cocok untuk kebutuhan industri makanan, restoran, UMKM, hingga produksi skala besar.</p>
                   <div class="actions">
-                    <a class="btn" href="#">Lihat Produk</a>
+                    <a class="btn view-product" href="#">Lihat Produk</a>
                     <button class="icon-btn">
                         <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
@@ -120,7 +120,7 @@
                   <h3 class="text-xl font-bold text-[#363636] px-4 mb-2">Bureo</h3>
                   <p class="muted px-4">Produk pelengkap berbasis biskuit yang dapat digunakan sebagai topping, isian, atau campuran adonan untuk berbagai kreasi makanan.</p>
                   <div class="actions">
-                    <a class="btn" href="#">Lihat Produk</a>
+                    <a class="btn view-product" href="#">Lihat Produk</a>
                     <button class="icon-btn">
                         <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
@@ -138,7 +138,7 @@
                   <h3 class="text-xl font-bold text-[#363636] px-4 mb-2">Golden Nuts</h3>
                   <p class="muted px-4">Bubuk kacang coklat dengan kualitas stabil, menghasilkan aroma dan warna coklat yang kuat.</p>
                   <div class="actions">
-                    <a class="btn" href="#">Lihat Produk</a>
+                    <a class="btn view-product" href="#">Lihat Produk</a>
                     <button class="icon-btn">
                         <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
@@ -156,7 +156,7 @@
                   <h3 class="text-xl font-bold text-[#363636] px-4 mb-2">Tepung Panir</h3>
                   <p class="muted px-4">Tepung panir berkualitas tinggi untuk berbagai kebutuhan gorengan dan makanan crispy dengan tekstur renyah sempurna.</p>
                   <div class="actions">
-                    <a class="btn" href="#">Lihat Produk</a>
+                    <a class="btn view-product" href="#">Lihat Produk</a>
                     <button class="icon-btn">
                         <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
@@ -174,7 +174,7 @@
                   <h3 class="text-xl font-bold text-[#363636] px-4 mb-2">Coklat Compound</h3>
                   <p class="muted px-4">Coklat compound premium untuk berbagai aplikasi pastry dan bakery dengan rasa coklat yang kaya dan lezat.</p>
                   <div class="actions">
-                    <a class="btn" href="#">Lihat Produk</a>
+                    <a class="btn view-product" href="#">Lihat Produk</a>
                     <button class="icon-btn">
                         <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
@@ -192,7 +192,7 @@
                   <h3 class="text-xl font-bold text-[#363636] px-4 mb-2">Gula Halus</h3>
                   <p class="muted px-4">Gula halus berkualitas tinggi untuk berbagai kebutuhan pembuatan kue dan dessert dengan tekstur lembut.</p>
                   <div class="actions">
-                    <a class="btn" href="#">Lihat Produk</a>
+                    <a class="btn view-product" href="#">Lihat Produk</a>
                     <button class="icon-btn">
                         <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
@@ -379,6 +379,37 @@
       </ul>
     </div>
   </nav>
+  <!-- Product detail modal -->
+  <div id="productModal" class="modal hidden" aria-hidden="true">
+    <div class="modal-backdrop" data-close-modal></div>
+    <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="productModalTitle">
+      <button class="modal-close text-[#525252]" aria-label="Close" data-close-modal>✕</button>
+      <div class="grid md:grid-cols-2 gap-6 items-start">
+        <div class="img-wrap">
+          <img id="productModalImage" src="images/img-product.png" alt="Tepung Roti Maissy" class="w-full h-auto rounded-lg object-cover" />
+        </div>
+        <div>
+          <h2 id="productModalTitle" class="text-2xl font-bold mb-2 text-[#525252]">Tepung Roti Maissy</h2>
+          <p id="productModalDesc" class="muted mb-4 text-[#525252]">Tepung roti premium dengan kualitas stabil, cocok untuk kebutuhan industri, UMKM, dan produksi skala besar.</p>
+          <div class="mb-4 text-sm text-gray-500">
+            Variant: White / Mix / Orange <br />
+            Berat: 10kg
+          </div>
+          <div class="flex gap-3">
+            <button id="productModalAdd" class="btn bg-[#fb923c] hover:bg-[#E36F2F] inline-flex items-center gap-2">              
+                <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 32px; height: 32px;">
+                  <path d="M2.89796 12.3412C2.25446 9.76725 1.93271 8.481 2.60846 7.6155C3.28421 6.75 4.61096 6.75 7.26371 6.75H10.7362C13.3897 6.75 14.7157 6.75 15.3915 7.6155C16.0672 8.481 15.7455 9.768 15.102 12.3412C14.6925 13.9785 14.4885 14.7967 13.878 15.2737C13.2675 15.75 12.4237 15.75 10.7362 15.75H7.26371C5.57621 15.75 4.73246 15.75 4.12196 15.2737C3.51146 14.7967 3.30671 13.9785 2.89796 12.3412Z" stroke="#fff" stroke-width="1.125"/>
+                  <path d="M14.625 7.125L14.0925 5.17125C13.887 4.4175 13.7842 4.041 13.5735 3.75675C13.3634 3.47435 13.078 3.2568 12.75 3.129C12.42 3 12.03 3 11.25 3M3.375 7.125L3.9075 5.17125C4.113 4.4175 4.21575 4.041 4.4265 3.75675C4.63663 3.47435 4.92002 3.2568 5.25 3.129C5.58 3 5.97 3 6.75 3" stroke="#fff" stroke-width="1.125"/>
+                  <path d="M6.75 3C6.75 2.80109 6.82902 2.61032 6.96967 2.46967C7.11032 2.32902 7.30109 2.25 7.5 2.25H10.5C10.6989 2.25 10.8897 2.32902 11.0303 2.46967C11.171 2.61032 11.25 2.80109 11.25 3C11.25 3.19891 11.171 3.38968 11.0303 3.53033C10.8897 3.67098 10.6989 3.75 10.5 3.75H7.5C7.30109 3.75 7.11032 3.67098 6.96967 3.53033C6.82902 3.38968 6.75 3.19891 6.75 3Z" stroke="#fff" stroke-width="1.125"/>
+                  <path d="M6 9.75V12.75M12 9.75V12.75M9 9.75V12.75" stroke="#fff" stroke-width="1.125" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Tambah Keranjang
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="script/script.js"></script>
 </body>
 </html>
